Updated project stream

--- a/src/editable-stuff/configurations.json
+++ b/src/editable-stuff/configurations.json
@@ -46,7 +46,7 @@
   "aboutDescription": "IT manager for a leading insurance, pensions, and fund management business. PhD student in CS at PJIIT/SWPS University.",
   "projectHeading": "Recent Projects",
   "gitHubLink": "https://api.github.com/users/",
-  "gitHubUsername": "hashirshoaeb",
+  "gitHubUsername": "karolchlasta",
   "gitHubQuerry": "/repos?sort=updated&direction=desc",
   "projectsLength": 4,
   "showNavigationbar": true,
