Added Academic CV

--- a/src/editable-stuff/configurations.json
+++ b/src/editable-stuff/configurations.json
@@ -43,7 +43,7 @@
   "instaLink": "https://www.instagram.com/",
   "instaUsername": "karol.h.chlasta",
   "instaQuerry": "/?__a=1",
-  "aboutDescription": "IT manager for a leading insurance, pensions, and fund management business. PhD student in CS at PJIIT/SWPS University.",
+  "aboutDescription": "PhD student in CS at PJAIT/SWPS University. IT manager for a leading insurance, pensions, and fund management business. Living in Warsaw, Poland.",
   "projectHeading": "Recent Projects",
   "gitHubLink": "https://api.github.com/users/",
   "gitHubUsername": "karolchlasta",
