--- a/src/editable-stuff/configurations.json
+++ b/src/editable-stuff/configurations.json
@@ -5,7 +5,7 @@
   "FirstName": "Karol",
   "MiddleName": "",
   "LastName": "Chlasta",
-  "devDesc": "Computer Scientist | Manager | Programmer | Photographer | Marathon Runner",
+  "devDesc": "| Computer Scientist | Manager | Programmer | Photographer | Marathon Runner ",
   "icons": [
     {
       "id": 0,
