--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "developers-portfolio",
   "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "https://karolchlasta.github.io",
+  "homepage": "https://karol.chlasta.pl",
   "version": "0.1.0",
   "private": true,
   "author": {
